--- a/Week 4 - Local Voter Guide/less/body.less
+++ b/Week 4 - Local Voter Guide/less/body.less
@@ -144,6 +144,7 @@
       padding: 3em;
       padding-top: 1.5em;
       padding-bottom: 5em;
+      font-size: 0.95em;
 
       @media (max-width: 754px) {
         padding: 0;
@@ -151,7 +152,7 @@
       }
 
       h3 {
-        font-size: 1.4em;
+        font-size: 1.2em;
         margin-bottom: 1em;
         font-family: "Playfair Display", serif;
         color: @dark;
@@ -203,7 +204,7 @@
   background-position: top;
 
   h2 {
-    font-size: 2em;
+    font-size: 1.8em;
     letter-spacing: 0.1em;
     font-family: "Darker Grotesque", sans-serif;
     margin-bottom: 1.5em;
@@ -217,6 +218,7 @@
     text-align: center;
     background-color: @mid-purple;
     padding: 0.2em 3em;
+    font-size: 0.9em;
 
     &:hover {
       background-color: @orange;
@@ -226,7 +228,7 @@
 }
 
 .forth-container {
-  height: 34em;
+  height: 30em;
   width: 100%;
   background: #f6f7f9;
   display: flex;
