--- a/Week 4 - Local Voter Guide/less/nav.less
+++ b/Week 4 - Local Voter Guide/less/nav.less
@@ -13,18 +13,9 @@ nav {
   background-attachment: fixed;
   background-size: 100%;
 
-  img {
-    height: 100%;
-    width: auto;
-    padding-left: 1.5em;
-    @media (max-width: 900px) {
-      padding: 0;
-    }
-  }
-
   h1 {
     color: white;
-    font-size: 1.8em;
+    font-size: 1.7em;
     padding-left: 1.5em;
     font-family: "Darker Grotesque", sans-serif;
     @media (max-width: 900px) {
